--- a/doc/wang.Rmd
+++ b/doc/wang.Rmd
@@ -6,7 +6,9 @@ output: html_notebook
 ##Step 1: Load data and libraries
 ```{r}
 library(plyr)
-load("/Users/ouminamikun/Documents/Columbia/Spring 2017/ADS/final project/dat.RData")
+load("/Users/ouminamikun/Documents/Columbia/Spring 2017/ADS/final project/dat2.RData")
+dat <- dat2
+
 ```
 
 ##Step 2: ranking
@@ -43,21 +45,37 @@ for(i in 2:length(nopop_hrated)){
 }
 ```
 
+
 ```{r}
-link <- NULL
+
+#####DON'T RUN THIS AGAIN######
+poster <- NULL
 for(i in 1:50){
-  
-  omdb_info <- search_by_title(trimws(top50[i], which = "both"))$Poster[1]
-  
-  if(is.null(omdb_info) == TRUE){
-    link[i] <- NA
+  omdb_poster <- search_by_title(trimws(top50[i], which = "both"))$Poster[1]
+  if(is.null(omdb_poster) == TRUE){
+    poster[i] <- NA
   } else{
-    link[i] <- omdb_info
+    poster[i] <- omdb_poster
   }
 }
-top50 <- data.frame(top50)
-top50$link <- link
 
+id <- NULL
+for(i in 1:50){
+  imdb_id <- search_by_title(trimws(top50[i], which = "both"))$imdbID[1]
+  if(is.null(imdb_id) == TRUE){
+    id[i] <- NA
+  } else{
+    id[i] <- imdb_id
+  }
+}
+
+imdbLink <- paste("http://www.imdb.com/title/", id, "/", sep = "")
+
+top50_df <- data.frame(top50)
+top50_df$poster <- poster
+top50_df$imbdLink <- imdbLink
+
+write.csv(top50_df, "top50_df.csv", row.names = F)
 ```
 
 ```{r}
@@ -151,10 +169,7 @@ ui <- dashboardPage(
                 box(title = "Not popular but great movies",
                     status = "danger",
                     solidHeader = T,
-                    verbatimTextOutput("nopop_hrated")) )),
-      
-      tabItem(tabName = "movies",
-              uiOutput("tiles"))
+                    verbatimTextOutput("nopop_hrated")) ))
               
         )
       )
@@ -170,19 +185,16 @@ server <- function(input, output) {
   output$top4 <- renderPlot({showposter("Mighty Aphroditee")})
   output$top5 <- renderPlot({showposter("Snow White and the Seven Dwarfs ")})
   
-  output$tiles <- renderUI({
-    fluidRow(
-      column(12, id="columns",
-        box(width=NULL,
-            title = "Hello")
-         ))
-       
-    
-    })
   
   }
 
 shinyApp(ui = ui, server = server)
+```
+
+
+```{r}
+
+
 ```
 
 ```{r}
@@ -195,6 +207,11 @@ library(shinyBS)
 library(shiny)
 library(shinydashboard)
 
+load("../output/dat2.RData")
+dat <- dat2
+load("../output/top50_df.RData")
+load("../output/wang.RData")
+
 ui <- dashboardPage(
   dashboardHeader(),
   
@@ -206,42 +223,54 @@ ui <- dashboardPage(
   
    dashboardBody(
       tabItem(tabName = "movies",
-              uiOutput("tiles"))
-    )
-   )
+              fluidRow(
+                box(width = NULL,
+                    title = "Top 8 Movies",
+                    status = "danger",
+                    collapsible = TRUE,
+                    solidHeader = FALSE,
+                    background = "black",
+                    uiOutput("tiles")),
+                box(title = "Top 50",
+                    status = "primary",
+                    solidHeader = TRUE,
+                    collapsible = TRUE,
+                    verbatimTextOutput("top50")),
+                box(title = "Popular but bad movies",
+                    status = "success",
+                    solidHeader = T,
+                    verbatimTextOutput("pop_lrated")),
+                box(title = "Not popular but great movies",
+                    status = "warning",
+                    solidHeader = T,
+                    verbatimTextOutput("nopop_hrated"))
+                )##end of fluidRow
+              )##end of tabItem
+      
+
+    )##end of dashBody
+   )##end of dashbooardPage
 
 server <- function(input, output){
    output$tiles <- renderUI({
     fluidRow(
-        a(box(width=NULL,
-              title = img(src = top50$link[1], height = 200, width = 200), footer = "Everyone Says I love you"),
-              href = "http://www.imdb.com/title/tt0116242/", 
-              target="_blank"),
-        a(box(width=NULL,
-              title = img(src = top50$link[2], height = 200, width = 300), footer = "What's Eating Gilbert Grape"),
-              href = "http://www.imdb.com/title/tt0108550/", 
-              target="_blank")
-         )
-    })
-  
+      lapply(top50_df$poster[1:8], function(i) {
+          a(box(width=3,
+            title = img(src = i, height = 350, width = 250),
+            footer = top50_df$top50[top50_df$poster == i]
+            ), href= top50_df$imbdLink[top50_df$poster == i] , target="_blank")
+         }) ##end of lappy
+    )
+   })##end of renderUI
+   
+   output$top50 <- renderText({top50_s })
+    output$pop_lrated <- renderText({pop_lrated_s})
+    output$nopop_hrated <- renderText({nopop_hrated_s})
 }
 
-shinyApp(ui, server)
-  
-
+shinyApp(ui, server )
 ```
-
 ```{r}
-HTML(paste0("<div class='image-wrap'><img src='./images/",
-                                recipe.df$img[recipe.df$recipe.link == 1],
-                                "' class='",
-                                recipe.df$img.css[recipe.df$recipe.link == 1],
-                                "'></div>", "<strong>",
-                                recipe.df$recipe.name[recipe.df$recipe.link == 1],
-                                "</strong><br>",
-                                '<span style="font-size: 11pt;">By ',
-                                recipe.df$recipe.author[recipe.df$recipe.link == 1],
-                                '</span>'))
-
+get_actors(find_by_title("Annie Hall"))
 ```
 
