--- a/lib/recommendation.Rmd
+++ b/lib/recommendation.Rmd
@@ -14,7 +14,7 @@ recon <- function(movie_name_given){
   moviedf <- as.data.frame(movies1, stringsAsFactors = FALSE)
   movie_id_row = filter(moviedf, movie_name == movie_name_given)
   movie_id_given = movie_id_row$movie_id
-  
+  movie_id_given = as.numeric(movie_id_given) + 1
   distancelist <- list()
   for(i in 1:nrow(V_matrix)){
     distance = (V_matrix[movie_id_given,] - V_matrix[i,])^2
@@ -33,7 +33,6 @@ recon <- function(movie_name_given){
 }
 
 recon("Star Wars ")
-
 
 ```
 
