--- a/lib/MovieNetWork.Rmd
+++ b/lib/MovieNetWork.Rmd
@@ -71,7 +71,7 @@ graphjs(edges,nodes)
 
 
 ```{r}
-input<-"Fierce Creatures"
+input<-"Star War"
 Movie.index<-grep(input,label)
 Rele.Movie.index<-MovieRec[Movie.index,]
 
@@ -88,10 +88,6 @@ ind<-unique(as.vector(ind))
 edges.rec<-edges[ind,]
 
 
-suppressPackageStartupMessages(library(threejs, quietly=TRUE))
-nodes.rec<-nodes[c(Movie.index,Rele.Movie.index),]
-num<-paste("^",Movie.index,"$",sep="")
-edges.rec<-edges[grep(num,from),]
 
 graphjs(edges.rec,nodes.rec)
 
