--- a/lib/MovieNetWork.Rmd
+++ b/lib/MovieNetWork.Rmd
@@ -72,14 +72,25 @@ graphjs(edges,nodes)
 
 ```{r}
 input<-"Fierce Creatures"
-Movie.index<-grep(input,label)
-Rele.Movie.index<-MovieRec[Movie.index,]
-
-suppressPackageStartupMessages(library(threejs, quietly=TRUE))
-nodes.rec<-nodes[c(Movie.index,Rele.Movie.index),]
-num<-paste("^",Movie.index,"$",sep="")
-edges.rec<-edges[grep(num,from),]
-graphjs(edges.rec,nodes.rec)
+ Movie.index<-grep(input,label)
+    Rele.Movie.index<-MovieRec[Movie.index,]
+    
+    Movie.Net<-c(Movie.index,Rele.Movie.index)
+    Rele.Movie.index<-MovieRec[Movie.Net,]
+    Rele.Movie.index<-unique(as.vector(Rele.Movie.index))
+    
+    
+    suppressPackageStartupMessages(library(threejs, quietly=TRUE))
+    nodes.rec<-nodes[Rele.Movie.index,]
+    num<-paste("^",Movie.Net,"$",sep="")
+    ind<-sapply(num,grep,from)
+    ind<-unique(as.vector(ind))
+    edges.rec<-edges[ind,]
+    
+    
+    
+    
+    graphjs(edges.rec,nodes.rec)
 
 ```
 
